--- a/src/components/servicecard/info-card.css
+++ b/src/components/servicecard/info-card.css
@@ -34,3 +34,11 @@
   border-radius: 1.25rem;
   overflow: hidden;
 }
+.Icons {
+  margin: auto;
+  font-size: 2.33333rem !important;
+  border-radius: 100%;
+  z-index: 1;
+  color: white;
+  background-color: #747474;
+}
